--- a/2_异构数据并行计算.md
+++ b/2_异构数据并行计算.md
@@ -3,16 +3,16 @@
 * [2.1 数据并行性](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#21-%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E6%80%A7)
 * [2.2 CUDA C程序结构](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#22-cuda-c%E7%A8%8B%E5%BA%8F%E7%BB%93%E6%9E%84)
 * [2.3 向量加法内核](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#23-%E5%90%91%E9%87%8F%E5%8A%A0%E6%B3%95%E5%86%85%E6%A0%B8)
-* [2.4 设备全局内存和数据传输]()
-* [2.5 内核函数和线程]()
-* [2.6 调用内核函数]()
-* [2.7 编译]()
-* [2.8 总结]()
-* [练习]()
+* [2.4 设备全局内存和数据传输](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#24-%E8%AE%BE%E5%A4%87%E5%85%A8%E5%B1%80%E5%86%85%E5%AD%98%E5%92%8C%E6%95%B0%E6%8D%AE%E4%BC%A0%E8%BE%93)
+* [2.5 内核函数和线程](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#25-%E5%86%85%E6%A0%B8%E5%87%BD%E6%95%B0%E5%92%8C%E7%BA%BF%E7%A8%8B)
+* [2.6 调用内核函数](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#26-%E8%B0%83%E7%94%A8%E5%86%85%E6%A0%B8%E5%87%BD%E6%95%B0)
+* [2.7 编译](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#27-%E7%BC%96%E8%AF%91)
+* [2.8 总结](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#28-%E6%80%BB%E7%BB%93)
+* [练习](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#%E7%BB%83%E4%B9%A0)
 
 数据并行性是指对数据集不同部分的计算工作可以相互独立地完成，因此可以并行进行。许多应用程序表现出大量的数据并行性，使它们适合于可扩展的并行执行。因此，并行程序员必须熟悉数据并行性的概念以及用于编写利用数据并行性的代码的并行编程语言构造。在本章中，我们将使用CUDA C语言构造开发一个简单的数据并行程序。
 
-|[top]()|
+|[top](https://github.com/tunglinwood/CUDA/edit/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md)|
 |-|
 
 ## 2.1 数据并行性
