--- a/3_多维网格与数据.md
+++ b/3_多维网格与数据.md
@@ -56,10 +56,61 @@ dim3 dimBlock(4, 2, 2);
 vecAddKernel<<<dimGrid,dimBlock>>>(...);
 ```
 
+![image](https://github.com/user-attachments/assets/0f949238-6fc6-4da3-8e08-ed7d07d80b71)
 > 图 3.1 CUDA 网格组织的多维示例
 
 图 3.1 中的网格由四个块组成，组织成一个 2*2 的数组。每个块用 (`blockIdx.y`, `blockIdx.x`) 标记。例如，块 (1,0) 的 `blockIdx.y=1` 和 `blockIdx.x=0`。请注意，块和线程标签的排序方式是最高维度优先。这种标记方式的顺序与 C 语句中设置配置参数的顺序相反，
 
 后者是最低维度优先。这种用于标记块的逆序在我们说明线程坐标映射到数据索引以访问多维数据时效果更好。
 
-每个 `threadIdx` 也由三个字段组成：x 坐标 `threadId.x`、y 坐标 `threadIdx.y` 和 z 坐标 `threadIdx.z`。图 3.1 说明了块内线程的组织方式。在此示例中，每个块被组织成 43232 的线程数组。由于网格中的所有块具有相同的维度，我们仅展示其中一个。图 3.1 展开了块 (1,1) 以显示其 16 个线程。例如，线程 (1,0,2) 的 `threadIdx.z=1`、`threadIdx.y=0` 和 `threadIdx.x=2`。请注意，在此示例中，我们有 4 个块，每个块 16 个线程，总共有 64 个线程在网格中。我们使用这些小数字来保持插图的简单性。典型的 CUDA 网格包含成千上万甚至数百万个线程。
+每个 `threadIdx` 也由三个字段组成：x 坐标 `threadId.x`、y 坐标 `threadIdx.y` 和 z 坐标 `threadIdx.z`。图 3.1 说明了块内线程的组织方式。在此示例中，每个块被组织成 4 * 2 * 2 的线程数组。由于网格中的所有块具有相同的维度，我们仅展示其中一个。图 3.1 展开了块 (1,1) 以显示其 16 个线程。例如，线程 (1,0,2) 的 `threadIdx.z=1`、`threadIdx.y=0` 和 `threadIdx.x=2`。请注意，在此示例中，我们有 4 个块，每个块 16 个线程，总共有 64 个线程在网格中。我们使用这些小数字来保持插图的简单性。典型的 CUDA 网格包含成千上万甚至数百万个线程。
+
+
+## 3.2 将线程映射到多维数据
+
+选择一维、二维或三维线程组织通常基于数据的性质。例如，图像是一个二维像素数组。使用由二维块组成的二维网格来处理图像中的像素通常很方便。
+
+![image](https://github.com/user-attachments/assets/4dd48257-ef11-4bb3-802d-592707c341e5)
+> 图3.2 
+
+图3.2展示了处理一个62×76像素图片P的这种排列方式（垂直方向或y方向有62个像素，水平方向或x方向有76个像素）。假设我们决定使用16×16的块，在x方向和y方向各有16个线程。我们将在y方向需要四个块，在x方向需要五个块，总共需要4×5=20个块，如图3.2所示。粗线标记块的边界。阴影区域描绘了覆盖像素的线程。每个线程被分配处理一个像素，其y和x坐标由其`blockIdx`、`blockDim`和`threadIdx`变量值确定：
+
+```
+垂直（行）坐标 = blockIdx.y * blockDim.y + threadIdx.y
+水平（列）坐标 = blockIdx.x * blockDim.x + threadIdx.x
+```
+
+例如，块(1,0)的线程(0,0)处理的Pin元素可以如下标识：
+Pin<sub>blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x * blockDim.x + threadIdx.x</sub> = Pin<sub>1 * 16 + 0, 0 * 16 + 0</sub> = Pin<sub>16, 0</sub>
+
+请注意，在图3.2中我们在y方向有两个额外的线程，在x方向有四个额外的线程。也就是说，我们将生成64×80个线程来处理62×76个像素。这类似于图2.9中1D核函数`vecAddKernel`处理1000个元素向量的情况，使用四个256线程块。回想图2.10中的if语句用于防止额外的24个线程生效。同样，我们应该预期图片处理核函数将包含if语句以测试线程的垂直和水平索引是否在像素的有效范围内。
+
+我们假设主机代码使用整数变量n跟踪y方向上的像素数量，另一个整数变量m跟踪x方向上的像素数量。我们进一步假设输入图片数据已复制到设备全局内存中，可以通过指针变量`Pin_d`访问。输出图片已在设备内存中分配，可以通过指针变量`Pout_d`访问。以下主机代码可以用来调用一个二维核函数`colorToGrayscaleConversion`来处理图片，如下所示：
+
+```cuda
+dim3 dimGrid(ceil(m/16.0), ceil(n/16.0), 1); 
+dim3 dimBlock(16, 16, 1);
+colorToGrayscaleConversion<<<dimGrid, dimBlock>>>(Pin_d, Pout_d, m, n);
+```
+
+在这个例子中，为简化起见，我们假设块的维度固定为16×16。而网格的维度则取决于图片的维度。要处理一个1500×2000（300万像素）的图片，我们将生成11,750个块：y方向94个块，x方向125个块。在核函数内，引用`gridDim.x`、`gridDim.y`、`blockDim.x`和`blockDim.y`将分别得到125、94、16和16。
+
+在展示核代码之前，我们首先需要了解C语句如何访问动态分配的多维数组的元素。理想情况下，我们希望将`Pin_d`作为二维数组访问，其中行j和列i的元素可以作为`Pin_d[j][i]`访问。然而，根据CUDA C开发的ANSI C标准要求，必须在编译时知道Pin中的列数才能将其作为二维数组访问。不幸的是，对于动态分配的数组，在编译时无法知道这个信息。实际上，使用动态分配的数组的部分原因是允许这些数组的大小和维度根据运行时的数据大小而变化。
+
+因此，动态分配的二维数组的列数信息在编译时设计上是未知的。结果，程序员需要显式地将动态分配的二维数组线性化，或“展平”，为当前的CUDA C中的等效一维数组。
+
+实际上，C中的所有多维数组都是线性化的。这是由于现代计算机中使用“平面”内存空间（参见“内存空间”侧边栏）。对于静态分配的数组，编译器允许程序员使用高维索引语法（例如`Pin_d[j][i]`）来访问其元素。在底层，编译器将它们线性化为等效的一维数组，并将多维索引语法转换为一维偏移。
+
+对于动态分配的数组，当前的CUDA C编译器将这种转换工作留给程序员，因为编译时缺乏维度信息。
+
+> ### 内存空间
+> 内存空间是处理器在现代计算机中访问其内存的一种简化视图。内存空间通常与每个运行的应用程序相关联。要由应用程序处理的数据和为应用程序执行的指令存储在其内存空间中的位置。每个位置通常可以容纳一个字节并有一个地址。需要多个字节的变量——浮点数为4个字节，双精度浮点数为8个字节——存储在连续的字节位置。当从内存空间访问数据值时，处理器会给出起始地址（起始字节位置的地址）和所需的字节数。
+> 大多数现代计算机至少有4G个字节大小的位置，其中每个G为1,073,741,824（2<sup>30</sup>）。所有位置都有一个从0到最大编号的地址标签。由于每个位置只有一个地址，我们说内存空间具有“平面”组织。结果，所有多维数组最终都被“展平”成等效的一维数组。虽然C程序员可以使用多维数组语法来访问多维数组的元素，但编译器将这些访问转换为指向数组起始元素的基指针以及由这些多维索引计算出的一维偏移。
+
+有至少两种方法可以线性化二维数组。其一是将同一行的所有元素放入连续位置。然后将行按顺序放入内存空间。这种排列称为行优先布局，如图3.3所示。为了提高可读性，我们用M<sub>j,i</sub>表示第j行第i列的元素M。M<sub>j,i</sub>等效于C表达式M[j][i]，但稍微更易读。图3.3显示了一个4×4矩阵M被线性化为16个元素的一维数组，首先是第0行的所有元素，然后是第1行的四个元素，依此类推。
+
+因此，行j和列i的元素M的等效一维索引为j*4+i。j*4项跳过j行之前的所有元素。i项然后在j行部分中选择正确的元素。例如，M<sub>2,1</sub>的一维索引为2*4+1=9。这在图3.3中有所说明，其中M<sub>9</sub>是M<sub>2,1</sub>的一维等效元素。这就是C编译器线性化二维数组的方式。
+
+另一种线性化二维数组的方法是将同一列的所有元素放入连续位置。然后将列按顺序放入内存空间。这种排列称为列优先布局，由FORTRAN编译器使用。注意二维数组的列优先布局等效于其转置形式的行优先布局。我们不会花更多时间在这个上面，除了提到那些主要先前编程经验是FORTRAN的读者应该意识到CUDA C使用行优先布局而非列优先布局。此外，许多为FORTRAN程序设计的C库使用列优先布局以匹配FORTRAN编译器布局。因此，这些库的手册页通常告诉用户，如果从C程序调用这些库，应转置输入数组。
+
+
