--- a/3_多维网格与数据.md
+++ b/3_多维网格与数据.md
@@ -107,10 +107,78 @@ colorToGrayscaleConversion<<<dimGrid, dimBlock>>>(Pin_d, Pout_d, m, n);
 > 内存空间是处理器在现代计算机中访问其内存的一种简化视图。内存空间通常与每个运行的应用程序相关联。要由应用程序处理的数据和为应用程序执行的指令存储在其内存空间中的位置。每个位置通常可以容纳一个字节并有一个地址。需要多个字节的变量——浮点数为4个字节，双精度浮点数为8个字节——存储在连续的字节位置。当从内存空间访问数据值时，处理器会给出起始地址（起始字节位置的地址）和所需的字节数。
 > 大多数现代计算机至少有4G个字节大小的位置，其中每个G为1,073,741,824（2<sup>30</sup>）。所有位置都有一个从0到最大编号的地址标签。由于每个位置只有一个地址，我们说内存空间具有“平面”组织。结果，所有多维数组最终都被“展平”成等效的一维数组。虽然C程序员可以使用多维数组语法来访问多维数组的元素，但编译器将这些访问转换为指向数组起始元素的基指针以及由这些多维索引计算出的一维偏移。
 
+![image](https://github.com/user-attachments/assets/c8fd7c97-3998-46dc-8a13-ae4791477683)
+> 图3.3 C数组的行优先布局。结果是一个等效的一维数组，用索引表达式j*Width+i访问，其中j是行，i是列，一个数组中每行有Width个元素。
+
 有至少两种方法可以线性化二维数组。其一是将同一行的所有元素放入连续位置。然后将行按顺序放入内存空间。这种排列称为行优先布局，如图3.3所示。为了提高可读性，我们用M<sub>j,i</sub>表示第j行第i列的元素M。M<sub>j,i</sub>等效于C表达式M[j][i]，但稍微更易读。图3.3显示了一个4×4矩阵M被线性化为16个元素的一维数组，首先是第0行的所有元素，然后是第1行的四个元素，依此类推。
 
 因此，行j和列i的元素M的等效一维索引为j*4+i。j*4项跳过j行之前的所有元素。i项然后在j行部分中选择正确的元素。例如，M<sub>2,1</sub>的一维索引为2*4+1=9。这在图3.3中有所说明，其中M<sub>9</sub>是M<sub>2,1</sub>的一维等效元素。这就是C编译器线性化二维数组的方式。
 
 另一种线性化二维数组的方法是将同一列的所有元素放入连续位置。然后将列按顺序放入内存空间。这种排列称为列优先布局，由FORTRAN编译器使用。注意二维数组的列优先布局等效于其转置形式的行优先布局。我们不会花更多时间在这个上面，除了提到那些主要先前编程经验是FORTRAN的读者应该意识到CUDA C使用行优先布局而非列优先布局。此外，许多为FORTRAN程序设计的C库使用列优先布局以匹配FORTRAN编译器布局。因此，这些库的手册页通常告诉用户，如果从C程序调用这些库，应转置输入数组。
 
+```cuda
+__global__ void colortoGrayscaleConvertion(unsigned char * Pout, unsigned char * Pin, int width, int height) {
+    // 计算当前线程对应的列索引
+    int col = blockIdx.x * blockDim.x + threadIdx.x;
 
+    // 计算当前线程对应的行索引
+    int row = blockIdx.y * blockDim.y + threadIdx.y;
+
+    // 检查线程是否在图像范围内
+    if (col < width && row < height) {
+        // 计算灰度图像中对应像素的偏移量
+        int grayOffset = row * width + col;
+        // 计算RGB图像中对应像素的偏移量
+        int rgbOffset = grayOffset * CHANNELS;
+
+        // 获取RGB值
+        unsigned char r = Pin[rgbOffset];
+        unsigned char g = Pin[rgbOffset + 1];
+        unsigned char b = Pin[rgbOffset + 2];
+
+        // 将RGB转换为灰度并存储到输出图像
+        Pout[grayOffset] = 0.21f * r + 0.71f * g + 0.07f * b;
+    }
+}
+```
+
+我们现在准备研究 `colorToGrayscaleConversion` 的源代码，如图 3.4 所示。内核代码使用以下公式将每个彩色像素转换为其灰度像素：
+
+$$ L = 0.12r + 0.72g + 0.07b $$
+
+在水平方向上共有 `blockDim.x * gridDim.x` 个线程。与 `vecAddKernel` 示例类似，以下表达式生成从 0 到 `blockDim.x * gridDim.x - 1` 的每个整数值（第 06 行）：
+
+```cuda
+col = blockIdx.x * blockDim.x + threadIdx.x
+```
+
+我们知道 `gridDim.x * blockDim.x` 大于或等于宽度（从主机代码传入的 `m` 值）。我们至少有与水平方向像素数量相同的线程。我们还知道垂直方向的线程数量至少与像素数量相同。因此，只要我们测试并确保只有具有行值和列值在范围内的线程，即 `(col < width) && (row < height)`，我们就可以覆盖图片中的每个像素（第 07 行）。
+
+由于每行有 `width` 个像素，我们可以生成像素在 `row` 行和 `col` 列处的 1D 索引，方法是 `row * width + col`（第 10 行）。这个 1D 索引是 `Pout` 的像素索引，因为输出灰度图像中的每个像素都是 1 字节（无符号字符）。在我们 62*76 的图像示例中，线程 (0,0) 处理的 `Pout` 像素的线性化 1D 索引由以下公式计算：
+
+\[ Pout_{blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x * blockDim.x + threadIdx.x} = Pout_{1 * 16 + 0, 0 * 16 + 0} = Pout_{16, 0} = Pout_{[16 * 76 + 0]} = Pout_{[1216]} \]
+
+至于 `Pin`，我们需要将灰度像素索引乘以 3（第 13 行），因为每个彩色像素存储为三个元素（r、g、b），每个元素都是 1 字节。生成的 `rgbOffset` 给出了 `Pin` 数组中彩色像素的起始位置。我们从 `Pin` 数组的三个连续字节位置读取 r、g 和 b 值（第 14-16 行），计算灰度像素值，并使用 `grayOffset` 将该值写入 `Pout` 数组（第 19 行）。在我们 62*76 的图像示例中，线程 (0,0) 处理的 `Pin` 像素第一个分量的线性化 1D 索引可以通过以下公式计算：
+
+\[ Pin_{blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x + blockDim.x + threadIdx.x} = Pin_{1 * 16 + 0, 0 * 16 + 0} = Pin_{16, 0} = Pin_{[16 * 76 * 3 + 0]} = Pin_{[3648]} \]
+
+![image](https://github.com/user-attachments/assets/5c025a39-b925-4182-afa4-4e600401e053)
+> 图 3.5 用 16*16 的块覆盖 76*62 的图片。
+
+访问的数据是从字节偏移量 3648 开始的 3 个字节。图 3.5 说明了 `colorToGrayscaleConversion` 在处理我们 62*76 的示例时的执行情况。假设 16*16 的块，调用 `colorToGrayscaleConversion` 内核生成 64*80 线程。网格将有 4*5=20 个块：垂直方向四个，水平方向五个。块的执行行为将分为四种不同的情况，如图 3.5 中的四个阴影区域所示。
+
+第一个区域，图 3.5 中标记为 1，包括属于覆盖图片大多数像素的 12 个块的线程。这些线程的 `col` 和 `row` 值都在范围内；所有这些线程通过 if 语句测试并处理图片深色阴影区域的像素。即每个块中所有 16*16=256 个线程都将处理像素。
+
+第二个区域，图 3.5 中标记为 2，包含属于中等阴影区域覆盖图片右上像素的三个块的线程。虽然这些线程的行值始终在范围内，但其中一些线程的列值超过了 76 的 m 值。这是因为水平方向上的线程数始终是程序员选择的 `blockDim.x` 值的倍数（在本例中为 16）。覆盖 76 个像素所需的最小 16 的倍数是 80。因此，每行的 12 个线程会发现其列值在范围内并处理像素。其余四个线程将发现其列值超出范围，因此不会通过 if 语句条件。这些线程不会处理任何像素。总体而言，这些块中的 12*16=192 个线程中的 256 个线程将处理像素。
+
+第三个区域，图 3.5 中标记为 3，占据覆盖图片中等阴影区域的左下方四个块。虽然这些线程的列值始终在范围内，但其中一些线程的行值超过了 62 的 n 值。这是因为垂直方向上的线程数始终是程序员选择的 `blockDim.y` 值的倍数（在本例中为 16）。覆盖 62 所需的最小 16 的倍数是 64。因此，每列的 14 个线程会发现其行值在范围内并处理像素。其余两个线程将不会通过 if 语句条件，不会处理任何像素。总体而言，这些块中的 16*14=224 个线程将处理像素。
+
+第四个区域，图 3.5 中标记为 4，包含覆盖图片右下方轻度阴影区域的线程。与区域 2 类似，每列顶部的 4 个线程会发现其列值超出范围。与区域 3 类似，这些块的整个底部两行的线程会发现其行值超出范围。总体而言，只有 14*12=168 个线程中的 256 个线程将处理像素。
+
+我们可以通过在线性化数组时包括另一个维度，将我们的讨论从 2D 数组轻松扩展到 3D 数组。这是通过将数组的每个“平面”一个接一个地放入地址空间来完成的。假设程序员使用变量 `m` 和 `n` 跟踪 3D 数组中列和行的数量。程序员还需要确定在调用内核时 `blockDim.z` 和 `gridDim.z` 的值。在内核中，数组索引将涉及另一个全局索引：
+
+```cuda
+int plane = blockIdx.z*blockDim.z + threadIdx.z
+```
+
+对 3D 数组 `P` 的线性访问形式为 `P[plane * m * n + row * m + col]`。处理 3D `P` 数组的内核需要检查 `plane`、`row` 和 `col` 的所有三个全局索引是否在数组的有效范围内。在第8章，Stencil 模式中，我们将进一步研究 CUDA 内核中的 3D 数组的使用。
