--- a/3_多维网格与数据.md
+++ b/3_多维网格与数据.md
@@ -81,7 +81,7 @@ vecAddKernel<<<dimGrid,dimBlock>>>(...);
 ```
 
 例如，块(1,0)的线程(0,0)处理的Pin元素可以如下标识：
-Pin<sub>blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x * blockDim.x + threadIdx.x</sub> = Pin<sub>1 * 16 + 0, 0 * 16 + 0</sub> = Pin<sub>16, 0</sub>
+$$ Pin_{blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x * blockDim.x + threadIdx.x} = Pin_{1 * 16 + 0, 0 * 16 + 0} = Pin_{16, 0} $$
 
 请注意，在图3.2中我们在y方向有两个额外的线程，在x方向有四个额外的线程。也就是说，我们将生成64×80个线程来处理62×76个像素。这类似于图2.9中1D核函数`vecAddKernel`处理1000个元素向量的情况，使用四个256线程块。回想图2.10中的if语句用于防止额外的24个线程生效。同样，我们应该预期图片处理核函数将包含if语句以测试线程的垂直和水平索引是否在像素的有效范围内。
 
@@ -156,11 +156,11 @@ col = blockIdx.x * blockDim.x + threadIdx.x
 
 由于每行有 `width` 个像素，我们可以生成像素在 `row` 行和 `col` 列处的 1D 索引，方法是 `row * width + col`（第 10 行）。这个 1D 索引是 `Pout` 的像素索引，因为输出灰度图像中的每个像素都是 1 字节（无符号字符）。在我们 62*76 的图像示例中，线程 (0,0) 处理的 `Pout` 像素的线性化 1D 索引由以下公式计算：
 
-\[ Pout_{blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x * blockDim.x + threadIdx.x} = Pout_{1 * 16 + 0, 0 * 16 + 0} = Pout_{16, 0} = Pout_{[16 * 76 + 0]} = Pout_{[1216]} \]
+$$ Pout_{blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x * blockDim.x + threadIdx.x} = Pout_{1 * 16 + 0, 0 * 16 + 0} = Pout_{16, 0} = Pout_{[16 * 76 + 0]} = Pout_{[1216]} $$
 
 至于 `Pin`，我们需要将灰度像素索引乘以 3（第 13 行），因为每个彩色像素存储为三个元素（r、g、b），每个元素都是 1 字节。生成的 `rgbOffset` 给出了 `Pin` 数组中彩色像素的起始位置。我们从 `Pin` 数组的三个连续字节位置读取 r、g 和 b 值（第 14-16 行），计算灰度像素值，并使用 `grayOffset` 将该值写入 `Pout` 数组（第 19 行）。在我们 62*76 的图像示例中，线程 (0,0) 处理的 `Pin` 像素第一个分量的线性化 1D 索引可以通过以下公式计算：
 
-\[ Pin_{blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x + blockDim.x + threadIdx.x} = Pin_{1 * 16 + 0, 0 * 16 + 0} = Pin_{16, 0} = Pin_{[16 * 76 * 3 + 0]} = Pin_{[3648]} \]
+$$ Pin_{blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x + blockDim.x + threadIdx.x} = Pin_{1 * 16 + 0, 0 * 16 + 0} = Pin_{16, 0} = Pin_{[16 * 76 * 3 + 0]} = Pin_{[3648]} $$
 
 ![image](https://github.com/user-attachments/assets/5c025a39-b925-4182-afa4-4e600401e053)
 > 图 3.5 用 16*16 的块覆盖 76*62 的图片。
