--- a/3_多维网格与数据.md
+++ b/3_多维网格与数据.md
@@ -81,9 +81,8 @@ vecAddKernel<<<dimGrid,dimBlock>>>(...);
 ```
 
 例如，块(1,0)的线程(0,0)处理的Pin元素可以如下标识：
-$$ 
-Pin_{blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x * blockDim.x + threadIdx.x} = Pin_{1 * 16 + 0, 0 * 16 + 0} = Pin_{16, 0}
-$$
+
+$$  Pin_{blockIdx.y * blockDim.y + threadIdx.y, blockIdx.x * blockDim.x + threadIdx.x} = Pin_{1 * 16 + 0, 0 * 16 + 0} = Pin_{16, 0} $$
 
 请注意，在图3.2中我们在y方向有两个额外的线程，在x方向有四个额外的线程。也就是说，我们将生成64×80个线程来处理62×76个像素。这类似于图2.9中1D核函数`vecAddKernel`处理1000个元素向量的情况，使用四个256线程块。回想图2.10中的if语句用于防止额外的24个线程生效。同样，我们应该预期图片处理核函数将包含if语句以测试线程的垂直和水平索引是否在像素的有效范围内。
 
