--- a/3_多维网格与数据.md
+++ b/3_多维网格与数据.md
@@ -183,3 +183,60 @@ int plane = blockIdx.z*blockDim.z + threadIdx.z
 ```
 
 对 3D 数组 `P` 的线性访问形式为 `P[plane * m * n + row * m + col]`。处理 3D `P` 数组的内核需要检查 `plane`、`row` 和 `col` 的所有三个全局索引是否在数组的有效范围内。在第8章，Stencil 模式中，我们将进一步研究 CUDA 内核中的 3D 数组的使用。
+
+## 3.3 图像模糊：一个更复杂的内核
+我们已经研究了 `vecAddkernel` 和 `colorToGrayscaleConversion`，在这些内核中，每个线程只对一个数组元素执行少量的算术操作。
+这些内核很好地实现了它们的目的：说明基本的 CUDA C 程序结构和数据并行执行概念。此时，读者应该问一个明显的问题：在 CUDA C 程序中，所有线程是否只独立执行如此简单和琐碎的操作？答案是否定的。在实际的 CUDA C 程序中，线程通常对其数据执行复杂的操作，并需要彼此协作。在接下来的几章中，我们将逐步研究展示这些特征的越来越复杂的例子。
+我们将从一个图像模糊函数开始。
+图像模糊在保留图像关键特征的边缘的同时，平滑像素值的突然变化。图 3.6 说明了图像模糊的效果。简单地说，我们使图像模糊。
+对人眼来说，模糊的图像往往会模糊细节并呈现“大图景”印象，或图片中的主要主题对象。在计算机图像处理算法中，图像模糊的一个常见用例是通过用干净的周围像素值校正有问题的像素值，减少图像中噪声和颗粒渲染效果的影响。在计算机视觉中，图像模糊可以用于允许边缘检测和对象识别算法专注于主题对象，而不是被大量细粒度对象所拖累。在显示器中，图像模糊有时用于通过模糊图像的其他部分来突出图像的特定部分。
+从数学上讲，图像模糊函数将输出图像像素的值计算为输入图像中包含该像素的像素块的加权和。正如我们将在第 7 章“卷积”中学习的那样，这种加权和的计算属于卷积模式。在本章中，我们将使用一种简化的方法，通过取围绕目标像素及其周围的 N*N 像素块的简单平均值来模糊图像。为了使算法简单，我们不会根据像素与目标像素的距离对任何像素的值进行加权。在实践中，在卷积模糊方法中进行加权是很常见的，例如高斯模糊。
+
+![image](https://github.com/user-attachments/assets/9ce4ce5b-6aca-4c84-8e58-e18e908d24f4)
+> 图 3.6 原始图像（左）和模糊版本（右）。
+
+图 3.7 显示了使用 3*3 像素块的图像模糊示例。在计算输出像素值时，补丁以位于 (row, col) 位置的输入像素为中心。3*3 补丁跨越三行（row-1, row, row+1）和三列（col-1, col, col+1）。例如，用于计算 (25, 50) 位置的输出像素的九个像素的坐标是 (24, 49), (24, 50), (24, 51), (25, 49), (25, 50), (25, 51), (26, 49), (26, 50) 和 (26, 51)。
+图 3.8 显示了一个图像模糊内核。与 `colorToGrayscaleConversion` 中使用的策略类似，我们使用每个线程来计算一个输出像素。
+即，线程与输出数据的映射保持不变。因此，在内核的开头，我们看到 `col` 和 `row` 索引的熟悉计算（第 03-04 行）。我们还看到熟悉的 if 语句，根据图像的高度和宽度验证 `col` 和 `row` 是否在有效范围内（第 05 行）。只有 `col` 和 `row` 索引都在有效范围内的线程才允许参与执行。
+
+![image](https://github.com/user-attachments/assets/487e3aaa-f082-43b3-ad49-b60e67d0443d)
+> 图 3.7 每个输出像素是输入图像中其周围像素和自身的平均值。
+
+如图 3.7 所示，`col` 和 `row` 值还提供了用于计算线程输出像素的输入像素块的中心像素位置。图 3.8 中的嵌套 for 循环（第 10-11 行）遍历补丁中的所有像素。我们假设程序定义了常量 `BLUR_SIZE`。`BLUR_SIZE` 的值设置为补丁每侧的像素数（半径），而 `2*BLUR_SIZE+1` 给出补丁一维的像素总数。例如，对于 3*3 补丁，`BLUR_SIZE` 设置为 1，而对于 7*7 补丁，`BLUR_SIZE` 设置为 3。外循环遍历补丁的行。对于每一行，内循环遍历补丁的列。在我们的 3*3 补丁示例中，`BLUR_SIZE` 为 1。对于计算输出像素 (25, 50) 的线程，在外循环的第一次迭代中，`curRow` 变量为 `row-BLUR_SIZE`=(25-1)=24。因此，在外循环的第一次迭代中，内循环遍历第 24 行的补丁像素。内循环从列 `col-BLUR_SIZE`=50-1=49 到 `col+BLUR_SIZE`=51 使用 `curCol` 变量迭代。因此，在外循环的第一次迭代中处理的像素是 (24, 49), (24, 50) 和 (24, 51)。读者应该验证，在外循环的第二次迭代中，内循环遍历像素 (25, 49), (25, 50) 和 (25, 51)。最后，在外循环的第三次迭代中，内循环遍历像素 (26, 49), (26, 50) 和 (26, 51)。
+
+01	__global__
+02 	void blurKernel(unsigned char *in, unsigned char *out, int w, int h){
+03	    // 计算当前线程处理的像素位置
+04	    int col = blockIdx.x * blockDim.x + threadIdx.x;
+05	    int row = blockIdx.y * blockDim.y + threadIdx.y;
+06 	    // 确保当前线程处理的位置在图像范围内
+07 	    if (col < w && row < h) {
+08	    	int pixVal = 0;  // 用于累积像素值
+09 		    int pixels = 0; // 统计有效像素数量
+10		
+11		    // 遍历指定大小的模糊区域
+12		    for (int blurRow = -BLUR_SIZE; blurRow < BLUR_SIZE + 1; ++blurRow) {
+13			    for (int blurCol = -BLUR_SIZE; blurCol < BLUR_SIZE + 1; ++blurCol) {
+14				    int curRow = row + blurRow; // 当前处理的行位置
+15				    int curCol = col + blurCol; // 当前处理的列位置
+16				    // 确保当前处理的位置在图像范围内
+17				    if (curRow >= 0 && curRow < h && curCol >= 0 && curCol < w) {
+18					    pixVal += in[curRow * w + curCol]; // 累积像素值
+19					    ++pixels; // 增加有效像素计数
+20				    }
+21			    }
+22	        }
+23	        // 计算平均值并写入输出图像
+24	        out[row * w + col] = (unsigned char) (pixVal / pixels);
+25	    }
+26	}
+> 图 3.8 图像模糊内核。
+
+使用 `curRow` 和 `curCol` 的线性索引访问当前迭代中访问的输入像素的值。它将像素值累加到一个正在运行的和变量 `pixVal` 中。通过递增 `pixels` 变量记录已累加了一个像素值的事实。
+在补丁中的所有像素都被处理后，通过将 `pixVal` 值除以 `pixels` 值来计算补丁中像素的平均值。它使用 `row` 和 `col` 的线性索引将结果写入其输出像素。
+包含一个条件语句，保护第 16 和 17 行的执行。例如，在计算图像边缘附近的输出像素时，补丁可能超出输入图像的有效范围。如图 3.9 所示，假设 3*3 补丁。在情况 1 中，左上角的像素正在模糊。预期补丁中的九个像素有五个在输入图像中不存在。在这种情况下，输出像素的 `row` 和 `col` 值分别为 0 和 0。在嵌套循环的执行过程中，九次迭代的 `curRow` 和 `curCol` 值为 (21,21), (21,0), (21,1), (0,21), (0,0), (0,1), (1,21), (1,0), 和 (1,1)。请注意，对于图像外部的五个像素，至少一个值小于 0。if 语句的 `curRow`，0 和 `curCol`，0 条件捕获这些值并跳过第 16 和 17 行的执行。
+因此，只有四个有效像素的值被累加到运行和变量中。像素值也只正确递增四次，以便在第 22 行正确计算平均值。
+
+![image](https://github.com/user-attachments/assets/f6ab5bc5-fb73-4f86-8729-9f0f27715fcf)
+> 图 3.9
+读者应该研究图 3.9 中的其他情况，并分析 `blurKernel` 中嵌套循环的执行行为。请注意，大多数线程会发现其分配的 3*3 补丁中的所有像素都在输入图像中。它们将累加所有九个像素。然而，对于四个角上的像素，负责的线程将只累加四个像素。对于四个边上的其他像素，负责的线程将累加六个像素。这些变化是跟踪实际累加的像素数的必要原因。
