--- a/3_多维网格与数据.md
+++ b/3_多维网格与数据.md
@@ -204,6 +204,7 @@ int plane = blockIdx.z*blockDim.z + threadIdx.z
 
 如图 3.7 所示，`col` 和 `row` 值还提供了用于计算线程输出像素的输入像素块的中心像素位置。图 3.8 中的嵌套 for 循环（第 10-11 行）遍历补丁中的所有像素。我们假设程序定义了常量 `BLUR_SIZE`。`BLUR_SIZE` 的值设置为补丁每侧的像素数（半径），而 `2*BLUR_SIZE+1` 给出补丁一维的像素总数。例如，对于 3*3 补丁，`BLUR_SIZE` 设置为 1，而对于 7*7 补丁，`BLUR_SIZE` 设置为 3。外循环遍历补丁的行。对于每一行，内循环遍历补丁的列。在我们的 3*3 补丁示例中，`BLUR_SIZE` 为 1。对于计算输出像素 (25, 50) 的线程，在外循环的第一次迭代中，`curRow` 变量为 `row-BLUR_SIZE`=(25-1)=24。因此，在外循环的第一次迭代中，内循环遍历第 24 行的补丁像素。内循环从列 `col-BLUR_SIZE`=50-1=49 到 `col+BLUR_SIZE`=51 使用 `curCol` 变量迭代。因此，在外循环的第一次迭代中处理的像素是 (24, 49), (24, 50) 和 (24, 51)。读者应该验证，在外循环的第二次迭代中，内循环遍历像素 (25, 49), (25, 50) 和 (25, 51)。最后，在外循环的第三次迭代中，内循环遍历像素 (26, 49), (26, 50) 和 (26, 51)。
 
+```cuda
 01	__global__
 02 	void blurKernel(unsigned char *in, unsigned char *out, int w, int h){
 03	    // 计算当前线程处理的像素位置
@@ -230,6 +231,7 @@ int plane = blockIdx.z*blockDim.z + threadIdx.z
 24	        out[row * w + col] = (unsigned char) (pixVal / pixels);
 25	    }
 26	}
+```
 > 图 3.8 图像模糊内核。
 
 使用 `curRow` 和 `curCol` 的线性索引访问当前迭代中访问的输入像素的值。它将像素值累加到一个正在运行的和变量 `pixVal` 中。通过递增 `pixels` 变量记录已累加了一个像素值的事实。
