--- a/2_异构数据并行计算.md
+++ b/2_异构数据并行计算.md
@@ -36,7 +36,7 @@ $$ L = 0.21r + 0.72g + 0.07b $$
 ![image](https://github.com/user-attachments/assets/812f37f6-7c27-43fa-983b-91b0ea98e90b)
 > 图2.2
 
-> 任务并行与数据并行
+> ### 任务并行与数据并行
 > 数据并行不是并行编程中唯一使用的并行类型。任务并行在并行编程中也被广泛使用。任务并行通常通过应用程序的任务分解来实现。例如，一个简单的应用程序可能需要进行向量加法和矩阵向量乘法。每一个都是一个任务。如果这两个任务可以独立完成，就存在任务并行性。I/O和数据传输也是常见的任务来源。
 > 在大型应用程序中，通常有大量的独立任务，因此有大量的任务并行性。例如，在一个分子动力学模拟器中，自然任务的列表包括振动力、旋转力、非键合力的邻居识别、非键合力、速度和位置、以及基于速度和位置的其他物理属性。
 > 一般而言，数据并行是并行程序可扩展性的主要来源。对于大数据集，通常可以找到丰富的数据并行性，从而能够利用大规模并行处理器，并随着每一代拥有更多执行资源的硬件的发展提升应用性能。然而，任务并行在实现性能目标方面也可以发挥重要作用。当我们介绍流（streams）时，将会进一步讨论任务并行性。
