--- a/3_多维网格与数据.md
+++ b/3_多维网格与数据.md
@@ -244,4 +244,72 @@ int plane = blockIdx.z*blockDim.z + threadIdx.z
 
 读者应该研究图 3.9 中的其他情况，并分析 `blurKernel` 中嵌套循环的执行行为。请注意，大多数线程会发现其分配的 3*3 补丁中的所有像素都在输入图像中。它们将累加所有九个像素。然而，对于四个角上的像素，负责的线程将只累加四个像素。对于四个边上的其他像素，负责的线程将累加六个像素。这些变化是跟踪实际累加的像素数的必要原因。
 
+## 3.4 矩阵乘法
 
+矩阵乘法（或简称为矩阵乘法）是基础线性代数子程序（BLAS）标准的重要组成部分（参见“线性代数函数”侧栏）。它是许多线性代数求解器的基础，例如 LU 分解。它也是深度学习中使用卷积神经网络的重要计算，在第 16 章“深度学习”中将详细讨论。
+
+> ### 线性代数函数
+> 线性代数操作广泛应用于科学和工程应用中。在基础线性代数子程序（BLAS）中，有三层线性代数函数。随着层次的增加，函数执行的操作数量也增加。第 1 层函数执行形式为 y=αx+y 的向量操作，其中 x 和 y 是向量，α 是标量。我们的向量加法示例是 α=1 时第 1 层函数的特例。第 2 层函数执行形式为 y=αAx+βy 的矩阵向量操作，其中 A 是矩阵，x 和 y 是向量，α 和 β 是标量。我们将在稀疏线性代数中研究一种第 2 层函数。第 3 层函数执行形式为 C=αAB+βC 的矩阵矩阵操作，其中 A、B 和 C 是矩阵，α 和 β 是标量。我们的矩阵乘法示例是 α=1 和 β=0 时第 3 层函数的特例。这些 BLAS 函数很重要，因为它们被用作高层代数函数（如线性系统求解器和特征值分析）的基本构建块。正如我们将要讨论的，不同 BLAS 函数实现的性能在顺序和并行计算机中可能相差几个数量级。
+
+一个 I*j（i 行 j 列）矩阵 M 和一个 j*k 矩阵 N 的矩阵乘法生成一个 I*k 矩阵 P。当执行矩阵乘法时，输出矩阵 P 的每个元素是 M 的一行和 N 的一列的内积。我们将继续使用 P<sub>row,col</sub> 表示 P 中第 row 行第 col 列的元素。如图 3.10 所示，P<sub>row,col</sub>（P 中的小方块）是 M 的第 row 行（M 中的水平条）和 N 的第 col 列（N 中的垂直条）组成的向量的内积。两个向量的内积有时称为点积，是各个向量元素乘积的和。即：
+
+$$ P_{row,col} = \sum M_{row,k} * N_{k,col} \text{ for } k=0, 1, . . .Width-1 $$
+
+例如，在图 3.10 中，假设 row=1 和 col=5，
+
+$$ P_{1,5} = M_{1,0} * N_{0,5} + M_{1,1} * N_{1,5} + M_{1,2} * N_{2,5} + ... + M_{1,Width-1} * N_{Width-1,5} $$
+
+![image](https://github.com/user-attachments/assets/447f29e3-cc48-4387-b57f-3d68abd28eda)
+> 图 3.10 通过平铺 P 使用多个块进行矩阵乘法。
+
+要使用 CUDA 实现矩阵乘法，我们可以将网格中的线程映射到输出矩阵 P 的元素，与我们在 `colorToGrayscaleConversion` 中使用的方法相同。即，每个线程负责计算一个 P 元素。每个线程计算的 P 元素的行和列索引与之前相同：
+
+```cuda
+row = blockIdx.y * blockDim.y + threadIdx.y
+```
+
+和
+
+```cuda
+col = blockIdx.x * blockDim.x + threadIdx.x
+```
+
+```cuda
+__global__ void MatrixMulKernel(float* M, float* N, float* P, int Width){
+     int row = blockIdx.y * blockDim.y + threadIdx.y;
+     int col = blockIdx.x * blockDim.x + threadIdx.x;
+     if ((row < Width) && (col < Width)){
+          float Pvalue = 0;
+          for (int k = 0; k < Width; ++k){
+              Pvalue += M[row * Width + k] * N[k * Width + col];
+          }
+          P[row * Width + col] = Pvalue;
+     }
+}
+```
+
+> 图 3.11 使用一个线程计算一个 P 元素的矩阵乘法核函数。
+
+通过这种一对一的映射，`row` 和 `col` 线程索引也是其输出元素的行和列索引。图 3.11 显示了基于这种线程到数据映射的核函数的源代码。读者应立即看到计算 `row` 和 `col`（第 03-04 行）以及 if 语句测试 `row` 和 `col` 是否都在范围内（第 05 行）的熟悉模式。这些语句几乎与 `colorToGrayscaleConversion` 中的对应语句相同。唯一显著的区别是我们简化了 `matrixMulKernel` 只处理方矩阵，因此用 `Width` 替换了宽度和高度。这种线程到数据的映射有效地将 P 分成了一个个小块，如图 3.10 中的浅色方块。每个块负责计算其中一个小块。
+
+我们现在将注意力转向每个线程完成的工作。回想一下，P<sub>row,col</sub> 是 M 的第 row 行和 N 的第 col 列的内积。在图 3.11 中，我们使用一个 for 循环来执行这个内积操作。进入循环之前，我们将一个局部变量 `Pvalue` 初始化为 0（第 06 行）。循环的每次迭代访问 M 的第 row 行中的一个元素和 N 的第 col 列中的一个元素，将两个元素相乘，并将乘积累加到 `Pvalue` 中（第 08 行）。首先让我们关注循环内的 M 元素访问。M 按行优先顺序线性化为等效的 1D 数组。即，M 的行一个接一个地放置在内存空间中，从第 0 行开始。因此，第 1 行的开始元素是 `M[1 * Width]`，因为我们需要考虑第 0 行的所有元素。一般来说，第 row 行的开始元素是 `M[row * Width]`。由于行中的所有元素都连续放置，row 行的第 k 个元素在 `M[row * Width + k]`。这是我们在图 3.11 中使用的线性化数组偏移量（第 08 行）。
+
+现在我们转向 N 的访问。如图 3.11 所示，col 列的开始元素是第 0 行的第 col 个元素，即 `N[col]`。访问 col 列的下一个元素需要跳过一整行。这是因为同一列的下一个元素是下一行中的相同元素。因此，col 列的第 k 个元素在 `N[k * Width + col]`（第 08 行）。退出 for 循环后，所有线程都有它们的 P 元素值存储在 `Pvalue` 变量中。然后每个线程使用等效的 1D 索引表达式 `row * Width + col` 写入其 P 元素（第 10 行）。这种索引模式与 `colorToGrayscaleConversion` 核函数中使用的类似。
+
+![image](https://github.com/user-attachments/assets/6fbde23c-5e4f-4d62-ad43-87124edd2ef1)
+> 图 3.12 `matrixMulKernel` 的一个小执行示例。
+
+现在我们使用一个小示例来说明矩阵乘法核函数的执行。图 3.12 显示了一个 4x4 的 P，`BLOCK_WIDTH`=2。虽然这种小矩阵和块大小不太现实，但它们允许我们将整个示例放入一张图片中。P 矩阵被分成了四个小块，每个块计算一个小块。我们通过创建 2x2 线程数组的块来实现这一点，每个线程计算一个 P 元素。在示例中，块 (0,0) 的线程 (0,0) 计算 P<sub>0,0</sub>，而块 (1,0) 的线程 (0,0) 计算 P<sub>2,0</sub>。`matrixMulKernel` 中的行和列索引标识线程要计算的 P 元素。行索引还标识 M 的行，列索引标识 N 的列，作为线程的输入值。图 3.13 说明了每个线程块中的乘法操作。对于这个小矩阵乘法示例，块 (0,0) 中的线程生成四个点积。块 (0,0) 中线程 (1,0) 的行和列索引分别为 0 * 0 + 1 = 1 和 0 * 0 + 0 = 0。因此该线程映射到 P<sub>1,0</sub> 并计算 M 的第 1 行和 N 的第 0 列的点积。让我们逐步执行图 3.
+
+11 中块 (0,0) 中线程 (0,0) 的 for 循环。第 0 次迭代（k=0）时，`row * Width + k`=0 * 4 + 0 = 0 和 `k * Width + col`=0 * 4 + 0 = 0。因此访问的输入元素是 `M[0]` 和 `N[0]`，它们是 M<sub>0,0</sub> 和 N<sub>0,0</sub> 的 1D 等效元素。注意这些确实是 M 第 0 行和 N 第 0 列的第 0 个元素。第 1 次迭代（k=1）时，`row * Width + k`=0 * 4 + 1 = 1 和 `k * Width + col`=1 * 4 + 0 = 4。因此我们访问 `M[1]` 和 `N[4]`，它们是 M<sub>0,1</sub> 和 N<sub>1,0</sub> 的 1D 等效元素。这些是 M 第 0 行和 N 第 0 列的第一个元素。第 2 次迭代（k=2）时，`row * Width + k`=0 * 4 + 2 = 2 和 `k * Width + col`=2 * 4 + 0 = 8，这导致访问 `M[2]` 和 `N[8]`。因此访问的元素是 M<sub>0,2</sub> 和 N<sub>2,0</sub> 的 1D 等效元素。最后，第 3 次迭代（k=3）时，`row * Width + k`=0 * 4 + 3 = 3 和 `k * Width + col`=3 * 4 + 0 = 12，这导致访问 `M[3]` 和 `N[12]`，它们是 M<sub>0,3</sub> 和 N<sub>3,0</sub> 的 1D 等效元素。我们现在验证 for 循环确实对块 (0,0) 中线程 (0,0) 的 M 第 0 行和 N 第 0 列执行了内积。循环后，线程写入 `P[row * Width + col]`，即 `P[0]`。这是 P<sub>0,0</sub> 的 1D 等效元素，因此块 (0,0) 中线程 (0,0) 成功计算了 M 第 0 行和 N 第 0 列的内积，并将结果存入 P<sub>0,0</sub>。我们将其作为练习，读者可以手动执行并验证块 (0,0) 中其他线程或其他块的 for 循环。
+
+由于网格大小受限于每个网格的最大块数和每个块的最大线程数，`matrixMulKernel` 能处理的最大输出矩阵 P 的大小也将受这些限制的约束。在需要计算大于此限制的输出矩阵的情况下，可以将输出矩阵划分为网格可以覆盖的子矩阵，并使用主机代码为每个子矩阵启动不同的网格。或者，我们可以更改核代码，使每个线程计算更多的 P 元素。我们将在本书后面探讨这两种选项。
+
+## 3.5 总结
+
+CUDA 网格和块是多维的，最多可以有三个维度。网格和块的多维性对于将线程组织成多维数据非常有用。内核执行配置参数定义了网格及其块的维度。`blockIdx` 和 `threadIdx` 中的唯一坐标允许网格中的线程标识自己及其数据域。程序员的责任是使用这些变量在内核函数中，使线程能够正确标识要处理的数据部分。
+
+![image](https://github.com/user-attachments/assets/5d90468c-e9fc-470e-a280-20fcd2d96ef1)
+> 图 3.13 一个线程块的矩阵乘法操作。
+
+访问多维数据时，程序员通常需要将多维索引线性化为 1D 偏移量。原因是 C 中动态分配的多维数组通常按行优先顺序存储为 1D 数组。我们通过复杂度逐渐增加的示例，让读者熟悉使用多维网格处理多维数组的机制。这些技能将是理解并行模式及其相关优化技术的基础。
