--- a/3_多维网格与数据.md
+++ b/3_多维网格与数据.md
@@ -299,17 +299,15 @@ __global__ void MatrixMulKernel(float* M, float* N, float* P, int Width){
 ![image](https://github.com/user-attachments/assets/6fbde23c-5e4f-4d62-ad43-87124edd2ef1)
 > 图 3.12 `matrixMulKernel` 的一个小执行示例。
 
-现在我们使用一个小示例来说明矩阵乘法核函数的执行。图 3.12 显示了一个 4x4 的 P，`BLOCK_WIDTH`=2。虽然这种小矩阵和块大小不太现实，但它们允许我们将整个示例放入一张图片中。P 矩阵被分成了四个小块，每个块计算一个小块。我们通过创建 2x2 线程数组的块来实现这一点，每个线程计算一个 P 元素。在示例中，块 (0,0) 的线程 (0,0) 计算 P<sub>0,0</sub>，而块 (1,0) 的线程 (0,0) 计算 P<sub>2,0</sub>。`matrixMulKernel` 中的行和列索引标识线程要计算的 P 元素。行索引还标识 M 的行，列索引标识 N 的列，作为线程的输入值。图 3.13 说明了每个线程块中的乘法操作。对于这个小矩阵乘法示例，块 (0,0) 中的线程生成四个点积。块 (0,0) 中线程 (1,0) 的行和列索引分别为 0 * 0 + 1 = 1 和 0 * 0 + 0 = 0。因此该线程映射到 P<sub>1,0</sub> 并计算 M 的第 1 行和 N 的第 0 列的点积。让我们逐步执行图 3.
+现在我们使用一个小示例来说明矩阵乘法核函数的执行。图 3.12 显示了一个 4x4 的 P，`BLOCK_WIDTH`=2。虽然这种小矩阵和块大小不太现实，但它们允许我们将整个示例放入一张图片中。P 矩阵被分成了四个小块，每个块计算一个小块。我们通过创建 2x2 线程数组的块来实现这一点，每个线程计算一个 P 元素。在示例中，块 (0,0) 的线程 (0,0) 计算 P<sub>0,0</sub>，而块 (1,0) 的线程 (0,0) 计算 P<sub>2,0</sub>。`matrixMulKernel` 中的行和列索引标识线程要计算的 P 元素。行索引还标识 M 的行，列索引标识 N 的列，作为线程的输入值。图 3.13 说明了每个线程块中的乘法操作。对于这个小矩阵乘法示例，块 (0,0) 中的线程生成四个点积。块 (0,0) 中线程 (1,0) 的行和列索引分别为 0 * 0 + 1 = 1 和 0 * 0 + 0 = 0。因此该线程映射到 P<sub>1,0</sub> 并计算 M 的第 1 行和 N 的第 0 列的点积。让我们逐步执行图 3.11 中块 (0,0) 中线程 (0,0) 的 for 循环。第 0 次迭代（k=0）时，`row * Width + k`=0 * 4 + 0 = 0 和 `k * Width + col`=0 * 4 + 0 = 0。因此访问的输入元素是 `M[0]` 和 `N[0]`，它们是 M<sub>0,0</sub> 和 N<sub>0,0</sub> 的 1D 等效元素。注意这些确实是 M 第 0 行和 N 第 0 列的第 0 个元素。第 1 次迭代（k=1）时，`row * Width + k`=0 * 4 + 1 = 1 和 `k * Width + col`=1 * 4 + 0 = 4。因此我们访问 `M[1]` 和 `N[4]`，它们是 M<sub>0,1</sub> 和 N<sub>1,0</sub> 的 1D 等效元素。这些是 M 第 0 行和 N 第 0 列的第一个元素。第 2 次迭代（k=2）时，`row * Width + k`=0 * 4 + 2 = 2 和 `k * Width + col`=2 * 4 + 0 = 8，这导致访问 `M[2]` 和 `N[8]`。因此访问的元素是 M<sub>0,2</sub> 和 N<sub>2,0</sub> 的 1D 等效元素。最后，第 3 次迭代（k=3）时，`row * Width + k`=0 * 4 + 3 = 3 和 `k * Width + col`=3 * 4 + 0 = 12，这导致访问 `M[3]` 和 `N[12]`，它们是 M<sub>0,3</sub> 和 N<sub>3,0</sub> 的 1D 等效元素。我们现在验证 for 循环确实对块 (0,0) 中线程 (0,0) 的 M 第 0 行和 N 第 0 列执行了内积。循环后，线程写入 `P[row * Width + col]`，即 `P[0]`。这是 P<sub>0,0</sub> 的 1D 等效元素，因此块 (0,0) 中线程 (0,0) 成功计算了 M 第 0 行和 N 第 0 列的内积，并将结果存入 P<sub>0,0</sub>。我们将其作为练习，读者可以手动执行并验证块 (0,0) 中其他线程或其他块的 for 循环。
 
-11 中块 (0,0) 中线程 (0,0) 的 for 循环。第 0 次迭代（k=0）时，`row * Width + k`=0 * 4 + 0 = 0 和 `k * Width + col`=0 * 4 + 0 = 0。因此访问的输入元素是 `M[0]` 和 `N[0]`，它们是 M<sub>0,0</sub> 和 N<sub>0,0</sub> 的 1D 等效元素。注意这些确实是 M 第 0 行和 N 第 0 列的第 0 个元素。第 1 次迭代（k=1）时，`row * Width + k`=0 * 4 + 1 = 1 和 `k * Width + col`=1 * 4 + 0 = 4。因此我们访问 `M[1]` 和 `N[4]`，它们是 M<sub>0,1</sub> 和 N<sub>1,0</sub> 的 1D 等效元素。这些是 M 第 0 行和 N 第 0 列的第一个元素。第 2 次迭代（k=2）时，`row * Width + k`=0 * 4 + 2 = 2 和 `k * Width + col`=2 * 4 + 0 = 8，这导致访问 `M[2]` 和 `N[8]`。因此访问的元素是 M<sub>0,2</sub> 和 N<sub>2,0</sub> 的 1D 等效元素。最后，第 3 次迭代（k=3）时，`row * Width + k`=0 * 4 + 3 = 3 和 `k * Width + col`=3 * 4 + 0 = 12，这导致访问 `M[3]` 和 `N[12]`，它们是 M<sub>0,3</sub> 和 N<sub>3,0</sub> 的 1D 等效元素。我们现在验证 for 循环确实对块 (0,0) 中线程 (0,0) 的 M 第 0 行和 N 第 0 列执行了内积。循环后，线程写入 `P[row * Width + col]`，即 `P[0]`。这是 P<sub>0,0</sub> 的 1D 等效元素，因此块 (0,0) 中线程 (0,0) 成功计算了 M 第 0 行和 N 第 0 列的内积，并将结果存入 P<sub>0,0</sub>。我们将其作为练习，读者可以手动执行并验证块 (0,0) 中其他线程或其他块的 for 循环。
+![image](https://github.com/user-attachments/assets/5d90468c-e9fc-470e-a280-20fcd2d96ef1)
+> 图 3.13 一个线程块的矩阵乘法操作。
 
 由于网格大小受限于每个网格的最大块数和每个块的最大线程数，`matrixMulKernel` 能处理的最大输出矩阵 P 的大小也将受这些限制的约束。在需要计算大于此限制的输出矩阵的情况下，可以将输出矩阵划分为网格可以覆盖的子矩阵，并使用主机代码为每个子矩阵启动不同的网格。或者，我们可以更改核代码，使每个线程计算更多的 P 元素。我们将在本书后面探讨这两种选项。
 
 ## 3.5 总结
 
 CUDA 网格和块是多维的，最多可以有三个维度。网格和块的多维性对于将线程组织成多维数据非常有用。内核执行配置参数定义了网格及其块的维度。`blockIdx` 和 `threadIdx` 中的唯一坐标允许网格中的线程标识自己及其数据域。程序员的责任是使用这些变量在内核函数中，使线程能够正确标识要处理的数据部分。
-
-![image](https://github.com/user-attachments/assets/5d90468c-e9fc-470e-a280-20fcd2d96ef1)
-> 图 3.13 一个线程块的矩阵乘法操作。
 
 访问多维数据时，程序员通常需要将多维索引线性化为 1D 偏移量。原因是 C 中动态分配的多维数组通常按行优先顺序存储为 1D 数组。我们通过复杂度逐渐增加的示例，让读者熟悉使用多维网格处理多维数组的机制。这些技能将是理解并行模式及其相关优化技术的基础。
