--- a/3_多维网格与数据.md
+++ b/3_多维网格与数据.md
@@ -311,3 +311,46 @@ __global__ void MatrixMulKernel(float* M, float* N, float* P, int Width){
 CUDA 网格和块是多维的，最多可以有三个维度。网格和块的多维性对于将线程组织成多维数据非常有用。内核执行配置参数定义了网格及其块的维度。`blockIdx` 和 `threadIdx` 中的唯一坐标允许网格中的线程标识自己及其数据域。程序员的责任是使用这些变量在内核函数中，使线程能够正确标识要处理的数据部分。
 
 访问多维数据时，程序员通常需要将多维索引线性化为 1D 偏移量。原因是 C 中动态分配的多维数组通常按行优先顺序存储为 1D 数组。我们通过复杂度逐渐增加的示例，让读者熟悉使用多维网格处理多维数组的机制。这些技能将是理解并行模式及其相关优化技术的基础。
+
+## 练习题
+
+1. 在本章中，我们实现了一个矩阵乘法内核，每个线程生成一个输出矩阵元素。在这个问题中，你将实现不同的矩阵乘法内核并进行比较。
+   a. 编写一个内核，使每个线程生成一个输出矩阵的行。填写设计的执行配置参数。
+   b. 编写一个内核，使每个线程生成一个输出矩阵的列。填写设计的执行配置参数。
+   c. 分析这两个内核设计的优缺点。
+
+2. 矩阵-向量乘法接受一个输入矩阵 B 和一个向量 C，并生成一个输出向量 A。输出向量 A 的每个元素是输入矩阵 B 的一行与 C 的点积，即
+
+   $$ A[i] = \sum^{j} B[i][j]+C[j] $$
+
+   为简单起见，我们只处理元素为单精度浮点数的方阵。编写一个矩阵-向量乘法内核和主机存根函数，可以使用四个参数调用：指向输出矩阵的指针、指向输入矩阵的指针、指向输入向量的指针和每个维度的元素数量。使用一个线程来计算一个输出向量元素。
+
+3. 考虑以下 CUDA 内核及其对应的主机函数：
+
+```cuda
+__global__ void foo_Kernel(float* a, float* b, float* P, unsigned int M, unsigned int N){
+     unsigned int row = blockIdx.y*blockDim.y + threadIdx.y;
+     unsigned int col = blockIdx.x*blockDim.x + threadIdx.x;
+     if ((row < M) && (col < N)){
+          b[row*N + col] = a[row*N + col]/2.1f + 4.8f;
+     }
+}
+void foo(float* a_d, float* b_d){
+    unsigned int M = 150;
+    unsigned int N = 300;
+    dim3 bd(16, 32);
+    dim3 gd((N - 1)/16 + 1, (M - 1)/32 + 1);
+    foo_kernel <<< gd, bd>>>(a_d, b_d, M, N);
+}
+```
+
+   a. 每个块的线程数是多少？
+   b. 网格中的线程总数是多少？
+   c. 网格中的块数是多少？
+   d. 执行第 05 行代码的线程数是多少？
+
+4. 考虑一个宽度为 400、高度为 500 的二维矩阵。矩阵存储为一维数组。指定矩阵中第 20 行第 10 列元素的数组索引：
+   a. 如果矩阵按行优先顺序存储。
+   b. 如果矩阵按列优先顺序存储。
+
+5. 考虑一个宽度为 400、高度为 500、深度为 300 的三维张量。张量按行优先顺序存储为一维数组。指定 x=10, y=20, z=5 处的张量元素的数组索引。
