--- a/3_多维网格与数据.md
+++ b/3_多维网格与数据.md
@@ -1,11 +1,11 @@
 # 3_多维网格与数据
 
-* [3.1 多维网格组织]()
-* [3.2 线程与多维数据的映射]()
-* [3.3 图像模糊：更复杂的内核]()
-* [3.4 矩阵乘法]()
-* [3.5 总结]()
-* [练习]()
+* [3.1 多维网格组织](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#31-%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E7%BB%84%E7%BB%87)
+* [3.2 线程与多维数据的映射](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#32-%E5%B0%86%E7%BA%BF%E7%A8%8B%E6%98%A0%E5%B0%84%E5%88%B0%E5%A4%9A%E7%BB%B4%E6%95%B0%E6%8D%AE)
+* [3.3 图像模糊：更复杂的内核](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#33-%E5%9B%BE%E5%83%8F%E6%A8%A1%E7%B3%8A%E4%B8%80%E4%B8%AA%E6%9B%B4%E5%A4%8D%E6%9D%82%E7%9A%84%E5%86%85%E6%A0%B8)
+* [3.4 矩阵乘法](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#34-%E7%9F%A9%E9%98%B5%E4%B9%98%E6%B3%95)
+* [3.5 总结](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#35-%E6%80%BB%E7%BB%93)
+* [练习](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#%E7%BB%83%E4%B9%A0%E9%A2%98)
 
 在第 2 章《异构数据并行计算》中，我们学习了如何编写一个简单的 CUDA C11 程序，该程序通过调用内核函数来操作一维数组的元素，从而启动一维线程网格。内核指定了网格中每个线程执行的语句。在本章中，我们将更一般地探讨线程的组织方式，并学习如何使用线程和块来处理多维数组。本章将通过多个示例进行讲解，包括将彩色图像转换为灰度图像、图像模糊处理和矩阵乘法。这些示例还旨在帮助读者理解数据并行性，然后我们将在接下来的章节中讨论 GPU 架构、内存组织和性能优化。
 
@@ -65,6 +65,8 @@ vecAddKernel<<<dimGrid,dimBlock>>>(...);
 
 每个 `threadIdx` 也由三个字段组成：x 坐标 `threadId.x`、y 坐标 `threadIdx.y` 和 z 坐标 `threadIdx.z`。图 3.1 说明了块内线程的组织方式。在此示例中，每个块被组织成 4 * 2 * 2 的线程数组。由于网格中的所有块具有相同的维度，我们仅展示其中一个。图 3.1 展开了块 (1,1) 以显示其 16 个线程。例如，线程 (1,0,2) 的 `threadIdx.z=1`、`threadIdx.y=0` 和 `threadIdx.x=2`。请注意，在此示例中，我们有 4 个块，每个块 16 个线程，总共有 64 个线程在网格中。我们使用这些小数字来保持插图的简单性。典型的 CUDA 网格包含成千上万甚至数百万个线程。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE)|
+|-|
 
 ## 3.2 将线程映射到多维数据
 
@@ -184,6 +186,9 @@ int plane = blockIdx.z*blockDim.z + threadIdx.z
 
 对 3D 数组 `P` 的线性访问形式为 `P[plane * m * n + row * m + col]`。处理 3D `P` 数组的内核需要检查 `plane`、`row` 和 `col` 的所有三个全局索引是否在数组的有效范围内。在第8章，Stencil 模式中，我们将进一步研究 CUDA 内核中的 3D 数组的使用。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE)|
+|-|
+
 ## 3.3 图像模糊：一个更复杂的内核
 我们已经研究了 `vecAddkernel` 和 `colorToGrayscaleConversion`，在这些内核中，每个线程只对一个数组元素执行少量的算术操作。
 这些内核很好地实现了它们的目的：说明基本的 CUDA C 程序结构和数据并行执行概念。此时，读者应该问一个明显的问题：在 CUDA C 程序中，所有线程是否只独立执行如此简单和琐碎的操作？答案是否定的。在实际的 CUDA C 程序中，线程通常对其数据执行复杂的操作，并需要彼此协作。在接下来的几章中，我们将逐步研究展示这些特征的越来越复杂的例子。
@@ -243,6 +248,9 @@ int plane = blockIdx.z*blockDim.z + threadIdx.z
 > 图 3.9
 
 读者应该研究图 3.9 中的其他情况，并分析 `blurKernel` 中嵌套循环的执行行为。请注意，大多数线程会发现其分配的 3*3 补丁中的所有像素都在输入图像中。它们将累加所有九个像素。然而，对于四个角上的像素，负责的线程将只累加四个像素。对于四个边上的其他像素，负责的线程将累加六个像素。这些变化是跟踪实际累加的像素数的必要原因。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE)|
+|-|
 
 ## 3.4 矩阵乘法
 
@@ -306,6 +314,9 @@ __global__ void MatrixMulKernel(float* M, float* N, float* P, int Width){
 
 由于网格大小受限于每个网格的最大块数和每个块的最大线程数，`matrixMulKernel` 能处理的最大输出矩阵 P 的大小也将受这些限制的约束。在需要计算大于此限制的输出矩阵的情况下，可以将输出矩阵划分为网格可以覆盖的子矩阵，并使用主机代码为每个子矩阵启动不同的网格。或者，我们可以更改核代码，使每个线程计算更多的 P 元素。我们将在本书后面探讨这两种选项。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE)|
+|-|
+
 ## 3.5 总结
 
 CUDA 网格和块是多维的，最多可以有三个维度。网格和块的多维性对于将线程组织成多维数据非常有用。内核执行配置参数定义了网格及其块的维度。`blockIdx` 和 `threadIdx` 中的唯一坐标允许网格中的线程标识自己及其数据域。程序员的责任是使用这些变量在内核函数中，使线程能够正确标识要处理的数据部分。
@@ -354,3 +365,7 @@ void foo(float* a_d, float* b_d){
    b. 如果矩阵按列优先顺序存储。
 
 5. 考虑一个宽度为 400、高度为 500、深度为 300 的三维张量。张量按行优先顺序存储为一维数组。指定 x=10, y=20, z=5 处的张量元素的数组索引。
+
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE.md#3_%E5%A4%9A%E7%BB%B4%E7%BD%91%E6%A0%BC%E4%B8%8E%E6%95%B0%E6%8D%AE)|
+|-|
